--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.4",
     "jspdf-autotable": "^5.0.7",
     "jspdf": "^4.0.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "@supabase/supabase-js": "^2.45.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
